--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html lang="">
   <head>
-    <title>Регистрация фирм Киев</title>
+    <title>Registration firms</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -54,8 +54,11 @@ Licence URI: http://www.os-templates.com/template-terms
       <header id="header" class="hoc clear">
         <!-- ################################################################################################ -->
         <div id="logo" class="fl_left">
-          <h1><a href="index.html">ФЕМИДА</a></h1>
-          <p>юридические услуги</p>
+          <h2 class="navbar-brand brand-name">
+            <a href="index.html"><img   class="img-responsive2"       
+            src="images/1.png"></a>
+        </h2>
+          <a src="images/1.png">Registration firms</a>
         </div>
         <div id="quickinfo" class="fl_right">
           <ul class="nospace inline">
@@ -260,6 +263,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <!-- ################################################################################################ -->
         <div class="sectiontitle">
           <h6 class="heading">O нас:</h6>
+          <br/>
           <p>
             Наши специалисты предоставляют услуги в сфере корпоративного права с
             2015 года. Юристы фирмы имеют все необходимые компетенции и большой
@@ -324,7 +328,7 @@ Licence URI: http://www.os-templates.com/template-terms
           </p> -->
         </div>
         <ul id="stats" class="nospace group center">
-          <li class="one_quarter ">
+          <li class="one_third">
             <a href="#"><i class="fa fa-3x fa-contao"></i></a>
             <p>ЛОЯЛЬНОСТЬ</p>
             <p></p>
@@ -423,7 +427,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <hr class="btmspace-50" />
         <!-- ################################################################################################ -->
         <div class="group">
-          <div class="one_third first">
+          <div class="one_third first kontakty">
             <h6 class="heading center">Контакты</h6>
             <ul class="nospace btmspace-30 linklist contact">
               <li>
@@ -441,11 +445,10 @@ Licence URI: http://www.os-templates.com/template-terms
               </li>
             </ul>
           </div>
-          <div class="one_third">
-            <iframe
+          <div >
+            <iframe class="iframe"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2543.5919670060193!2d30.635847715829485!3d50.39280449939767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c44ebcae07bb%3A0x5998c3a2ef70996b!2zMzlCLCDQv9GA0L7RgdC_0LXQutGCINCf0LXRgtGA0LAg0JPRgNC40LPQvtGA0LXQvdC60LAsIDM50JEsIDEwNSwg0JrQuNGX0LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2spl!4v1592412175734!5m2!1sru!2spl"
-              width="500em"
-              height="400em"
+        
               frameborder="0"
               style="border: 0;"
               allowfullscreen=""
