--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@ Licence URI: http://www.os-templates.com/template-terms
             </ul>
           </li>
           <li>
-            <a class="drop" href="./pages/pokupka-prodaza-firm.html">Продажа-покупка фирм</a>
-            <ul>
+            <a  href="./pages/pokupka-prodaza-firm.html">Продажа-покупка фирм</a>
+            <!-- <ul>
+              class="drop"
               <li>
                 <a href="./pages/pokupka-prodaga/pred-bex-deyatel.html"
                   >Предприятие без деятельности
@@ -143,7 +144,7 @@ Licence URI: http://www.os-templates.com/template-terms
                   >Поможем продать Ваше предприятие</a
                 >
               </li>
-            </ul>
+            </ul> -->
           </li>
           <li><a href="./pages/ceny.html">Цены</a></li>
           <li><a href="./pages/o-nas.html">О нас</a></li>
@@ -170,7 +171,7 @@ Licence URI: http://www.os-templates.com/template-terms
                 <p>
                  Поможем Вам в комплексном подходе регистрации Вашего бизнеса под ключ.
                 </p>
-                <footer><a class="btn" href="#">Подробнее</a></footer>
+                <footer><a class="btn" href="./pages/uridicheskie-uslugi.html">Подробнее</a></footer>
               </article>
             </li>
             <li>
@@ -180,7 +181,7 @@ Licence URI: http://www.os-templates.com/template-terms
                 <p>
                   Подберем предприятие по Вашему запросу
                 </p>
-                <footer><a class="btn" href="#">Подробнее</a></footer>
+                <footer><a class="btn" href="./pages/pokupka-prodaza-firm.html">Подробнее</a></footer>
               </article>
             </li>
             <li>
@@ -193,7 +194,7 @@ Licence URI: http://www.os-templates.com/template-terms
                   Ликвидируем Ваше предприятие, путем продажи корпоративных прав
                   в краткие сроки
                 </p>
-                <footer><a class="btn" href="#">Подробнее</a></footer>
+                <footer><a class="btn" href="./pages/uslugi/likvidacyja.html">Подробнее</a></footer>
               </article>
             </li>
             <li>
@@ -205,7 +206,7 @@ Licence URI: http://www.os-templates.com/template-terms
                 <p>
                   Предоставим информацию о вашем контрагенте
                 </p>
-                <footer><a class="btn" href="#">Подробнее</a></footer>
+                <footer><a class="btn" href="./pages/uslugi/proverka-kontragenta.html">Подробнее</a></footer>
               </article>
             </li>
             <li>
@@ -216,7 +217,7 @@ Licence URI: http://www.os-templates.com/template-terms
                   Номинальный сервис    massa vitae sapien duis eget
                   libero non nisi.
                 </p>
-                <footer><a class="btn" href="#">Подробнее</a></footer>
+                <footer><a class="btn" href="./pages/uridicheskie-uslugi.html">Подробнее</a></footer>
               </article>
             </li>
           </ul>
