--- a/pages/uslugi/erdr.html
+++ b/pages/uslugi/erdr.html
@@ -134,9 +134,9 @@
    
     <main>
 <br/>
-<ol start="2">
-  <li><strong> </strong><strong>Внесение изменений в Единый Государственный Реестр:</strong></li>
-  </ol>
+
+<strong>Внесение изменений в Единый Государственный Реестр:</strong>
+
   <p>Вы являетесь учредителем юридического лица и у Вас возникла необходимость изменить:</p>
   <ul>
   <li>Изменение названия юридического лица;</li>
