--- a/pages/uslugi/klucz.html
+++ b/pages/uslugi/klucz.html
@@ -79,7 +79,7 @@
                 >
               </li>
               <li>
-                <a href="#"
+                <a href="./erdr.html"
                   >Внесение изменений в Единый Государственный Реестр</a
                 >
               </li>
