--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@ Licence URI: http://www.os-templates.com/template-terms
 
   </head>
   <body id="top">
-    <!-- ################################################################################################ -->
-    <!-- ################################################################################################ -->
-    <!-- ################################################################################################ -->
+    
     <div class="wrapper row0">
       <div id="topbar" class="hoc clear">
-        <!-- ################################################################################################ -->
         <div class="fl_right">
           <ul>
             <li>
@@ -38,18 +35,13 @@ Licence URI: http://www.os-templates.com/template-terms
             </li>
             <li>
               <i class="fa fa-envelope-o"></i> <a href="mailto:Registraciyafirmy@protonmail.com"
-              >Registraciyafirmy@protonmail.com</a
-            >
+              >Registraciyafirmy@protonmail.com</a>
             </li>
           </ul>
         </div>
-
-        <!-- ################################################################################################ -->
       </div>
     </div>
-    <!-- ################################################################################################ -->
-    <!-- ################################################################################################ -->
-    <!-- ################################################################################################ -->
+  
     <div class="wrapper row1">
       <header id="header" class="hoc clear">
         <!-- ################################################################################################ -->
@@ -166,7 +158,7 @@ Licence URI: http://www.os-templates.com/template-terms
           <ul class="slides">
             <li>
               <article>
-                <p>Praesent justo at sem</p>
+                <p> </p>
                 <h3 class="heading">Регистрация бизнеса </h3>
                 <p>
                  Поможем Вам в комплексном подходе регистрации Вашего бизнеса под ключ.
@@ -176,7 +168,7 @@ Licence URI: http://www.os-templates.com/template-terms
             </li>
             <li>
               <article>
-                <p>Felis nunc diam pede</p>
+                <p> </p>
                 <h3 class="heading">Подбор предприятия</h3>
                 <p>
                   Подберем предприятие по Вашему запросу
@@ -186,7 +178,7 @@ Licence URI: http://www.os-templates.com/template-terms
             </li>
             <li>
               <article>
-                <p>Vehicula sed pretium</p>
+                <p> </p>
                 <h3 class="heading">
                   Ликвидиция предприятия 
                 </h3>
@@ -199,7 +191,7 @@ Licence URI: http://www.os-templates.com/template-terms
             </li>
             <li>
               <article>
-                <p>Vehicula sed pretium</p>
+                <p> </p>
                 <h3 class="heading">
                   Информация о контрагенте
                 </h3>
@@ -211,11 +203,11 @@ Licence URI: http://www.os-templates.com/template-terms
             </li>
             <li>
               <article>
-                <p>Vehicula sed pretium</p>
+                <p> </p>
                 <h3 class="heading">Номинальный сервис</h3>
                 <p>
-                  Номинальный сервис    massa vitae sapien duis eget
-                  libero non nisi.
+                  Использование номинального сервиса позволит защитить информацию о фактических владельцах компании (бенефициарных собственниках) и лицах, принимающих непосредственное участие в управлении компании. 
+                
                 </p>
                 <footer><a class="btn" href="./pages/uridicheskie-uslugi.html">Подробнее</a></footer>
               </article>
@@ -407,26 +399,7 @@ Licence URI: http://www.os-templates.com/template-terms
       style="background-image: url('images/13.jpg');"
     >
       <footer id="footer" class="hoc clear">
-        <!-- ################################################################################################ -->
-        <!-- <div class="center btmspace-50">
-          <h2 class="heading">Dodmond</h2>
-          <nav>
-            <ul class="nospace inline pushright uppercase">
-              <li>
-                <a href="#"><i class="fa fa-lg fa-home"></i></a>
-              </li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Terms</a></li>
-              <li><a href="#">Privacy</a></li>
-              <li><a href="#">Cookies</a></li>
-              <li><a href="#">Disclaimer</a></li>
-            </ul>
-          </nav>
-        </div> -->
-        <!-- ################################################################################################ -->
         <hr class="btmspace-50" />
-        <!-- ################################################################################################ -->
         <div class="group">
           <div class="one_third first kontakty">
             <h6 class="heading center">Контакты</h6>
@@ -438,7 +411,6 @@ Licence URI: http://www.os-templates.com/template-terms
                 </address>
               </li>
               <li><a href="tel:+380931879735">+38(093) 187 97 35</a><i class="fa fa-phone"></i></li>
-              <!-- <li><i class="fa fa-fax"></i> +00 (123) 456 7890</li> -->
               <li>
                 <i class="fa fa-envelope-o"></i> <a href="mailto:Registraciyafirmy@protonmail.com"
                 >Registraciyafirmy@protonmail.com</a
@@ -458,7 +430,6 @@ Licence URI: http://www.os-templates.com/template-terms
             ></iframe>
           </div>
         </div>
-        <!-- ################################################################################################ -->
       </footer>
     </div>
     <!-- ################################################################################################ -->
