--- a/pages/uslugi/per-reg.html
+++ b/pages/uslugi/per-reg.html
@@ -153,7 +153,7 @@
       <li>Постановка на учет в управлении статистики Украины;</li>
       <li>9<strong>. </strong>Статус плательщика НДС, или единого налога (на выбор);</li>
       </ol>
-      <p><strong>Узнать больше информации об этом можно у наших специалистов по указанным телефонам или в офисе; (гипперсылка на телефон)</strong></p>
+      <p><strong>Узнать больше информации об этом можно у наших специалистов по указанным телефонам или в офисе </strong></p>
    
       
       </main>
