--- a/pages/uslugi/reg-chepe.html
+++ b/pages/uslugi/reg-chepe.html
@@ -151,7 +151,7 @@
       <li>Постановка на учет в управлении статистики Украины;</li>
       <li>9<strong>. </strong>Статус плательщика НДС, или единого налога (на выбор);</li>
       </ol>
-      <p><strong>Если Вам нужна консультация (узнать больше деталей об этом можно у наших специалистов по указанным телефонам или в офисе); (гипперсылка на телефон)</strong></p>
+      <p><strong>Если Вам нужна консультация (узнать больше деталей об этом можно у наших специалистов по указанным телефонам или в офисе)</strong></p>
       <p><strong>&nbsp;</strong></p>
       </main>
 
